app/css/app.css
/* app css stylesheet */



.view-container {
  position: relative;
  font-size: 16px;
}

.title-container {
  background-color: #4C7BE0;
  text-align: center;
  color: #fff;
  margin: 0;
}

.title-container {
  margin: 0;
}

.input-group {
  margin-bottom: 20px;
}

.wellList {
  padding-left: 0;
}

/*-----------details----------------------------*/

#map-outer {  
  padding: 20px; 
  border: 2px solid #CCC; 
  margin-bottom: 20px; 
  background-color:#FFF 
}
#map-container { 
  height: 300px;
  width: 50%;
  display: inline-block;
}

#address {
  display: inline-block;
  width: 49%;
  vertical-align: top;
}

.wellForm {
  border: 5px solid #f7f7f9;
  padding: 15px;
}

.form-address {
  margin-bottom: 15px;  
}

/*---------main list------------*/


.well-list {
  list-style: none;
  margin: 0;
  padding: 0;
}

.well-list .well-list-item {
  display: inline-block;
  margin: 10px;
  width: 193px;
  height: 270px;
  border-radius: 5px;
  text-align: center;
  color: #fff;
  padding: 20px 0;
  font-weight: bold;
}

.well-list .well-list-item h2 {
  font-weight: bold;
}

.well-list .well-list-item .status-container {
  margin-bottom: 10px;
  background: rgb(38, 38, 38);
  padding: 10px;
}

.well-list .well-list-item .status-container .status-text {
  font-size: 60px;
  line-height: 1;
  display: block;
}

.well-list .well-list-item .status-container p {
  margin: 0;
}

.well-list .well-list-item .status-container .status-time-hour {
  font-size: 30px;
}

.well-list .well-list-item .status-container .status-time-day {
  font-size: 22px;
}

.well-list .well-list-item.active {
  background: #51A12A;/*green*/
}

.well-list .well-list-item.error {
  background: #F0402A;/*red*/
}

.well-list .well-list-item.warning {
  background: #FFDE00;/*yellow*/
}

.well-list .well-list-item.disabled {
  background: #696969;/*gray*/
}




/*   lista   */
.wellList li {
  list-style: none;
  display: block;
  border: 1px solid #ddd;
  border-radius: 4px;
  margin-bottom: 10px;
}

.wellList li:nth-child(odd) {
    background-color: #f5f5f5;
}

.wellList li dl {
  display: inline-block;
}

.wellList li .moreDetails {
  float: right;
  width: 104px;
}


.wellDetails .table tr.active{
    background: #51A12A;/*green*/
}
.wellDetails .table tr.error{
    background: #F0402A;/*red*/
}

.wellDetails .table tr.warning {
  background: #FFDE00;/*yellow*/
}

.wellDetails .table tr.disabled {
  background: #696969;/*gray*/
}

.wellDetails .table > tbody > tr > td {
  background-color: inherit;
}

@media screen and (min-width: 420px) {
  .view-container {
    padding: 0;
  }

  .title-container {
    height: 110px;
  }

  .title-container h1 {
    font-size: 50px;
    font-weight: bold;
    padding-top: 20px;
  }
  .title-container span {
    margin-right: 10px;
  }

  .well-list .well-list-item {
    margin: 5px;
    width: 153px;
    height: 200px;
    padding: 10px 0;
  }

  .well-list .well-list-item .status-container {
    margin-bottom: 5px;
    padding: 5px;
  }

  .well-list .well-list-item .status-container .status-text {
    font-size: 40px;
  }
  .well-list .well-list-item .status-container .status-time-hour {
    font-size: 20px;
  }
  .well-list .well-list-item .status-container .status-time-day {
    font-size: 16px;
  }

  #map-container { 
    height: 300px;
    width: 100%;
    display: block;
  }

  #address {
    display: block;
    width: 100%;
  }

}

@media screen and (min-width: 800px) {
  .view-container {
    padding: 0 10px;
  }

  .title-container {
    height: 150px;
  }

  .title-container h1 {
    font-size: 75px;
  }

  .well-list .well-list-item {
    margin: 10px;
    width: 193px;
    height: 270px;
    padding: 20px 0;
  }
  .well-list .well-list-item .status-container {
    margin-bottom: 10px;
    padding: 10px;
  }
  .well-list .well-list-item .status-container .status-text {
    font-size: 60px;
  }
  .well-list .well-list-item .status-container .status-time-hour {
    font-size: 30px;
  }
  .well-list .well-list-item .status-container .status-time-day {
    font-size: 22px;
  }
  /*detail*/
  #map-container { 
    width: 50%;
    display: inline-block;
  }

  #address {
    display: inline-block;
    width: 49%;
  }
}

